experiment_output/error_log/nondex-forest-code-spring_study_hyunsoo:vol2.log
/mnt/batch/tasks/workitems/NONDEX_nondex_r131_1M31d16h48m2s/job-1/Task635/wd/NonDex-plugin-test/github.com/forest-code/spring_study_hyunsoo/vol2/src/main/java/springbook/learningtest/spring/ioc/bean/Hello.java:5: error: package javax.annotation does not exist
import javax.annotation.PostConstruct;
                       ^
/mnt/batch/tasks/workitems/NONDEX_nondex_r131_1M31d16h48m2s/job-1/Task635/wd/NonDex-plugin-test/github.com/forest-code/spring_study_hyunsoo/vol2/src/main/java/springbook/learningtest/spring/ioc/bean/Hello.java:13: error: cannot find symbol
	@PostConstruct
	 ^
  symbol:   class PostConstruct
  location: class Hello
2 errors

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':vol2:compileJava'.
> Compilation failed; see the compiler error output for details.

* Try:
Run with --stacktrace option to get the stack trace. Run with --info or --debug option to get more log output. Run with --scan to get full insights.

* Get more help at https://help.gradle.org

BUILD FAILED in 2s
